# galaxy-architecture

./: .gitignore  .gitmodules  IMAGE_HANDLING.md  LAYOUT_PLAN.md  MIGRATED.md  Makefile  PLAN.md  README.md  SPHINX_PLAN.md  pyproject.toml
.claude/: CLAUDE.md
.zellij/: layout.kdl
doc/: Makefile
docs/: .gitkeep  CONTRIBUTING.md  DIAGRAM_GUIDE.md  GITHUB_PAGES_QUICKSTART.md  GITHUB_PAGES_SETUP.md  MIGRATION.md  OUTPUTS.md  SCHEMA.md  SLIDE_GUIDE.md
images/: MERMAID.md  Makefile  README.md  build.sh  core_branches.mindmap.yml  core_files_ci.mindmap.yml  core_files_client_sources.mindmap.yml  core_files_client_sources.plantuml.txt  core_files_code.mindmap.yml  core_files_code_package.mindmap.yml  core_files_code_python_2_views.mindmap.yml  core_files_plugin_example.mindmap.yml  core_files_plugin_example.plantuml.txt  core_files_project_docs.mindmap.yml  core_files_scripts.mindmap.yml  core_files_test.mindmap.yml  core_models_managers.plantuml.txt  core_packages.plantuml.txt  event_loop_blocking.mermaid.txt  file_sources_access_control.plantuml.txt  file_sources_add_plugin.plantuml.txt  file_sources_api_flow.plantuml.txt  file_sources_evolution.mermaid.txt  file_sources_fsspec_hierarchy.plantuml.txt  file_sources_instance_creation.plantuml.txt  file_sources_interface_hierarchy.plantuml.txt  file_sources_oauth_sequence.plantuml.txt  file_sources_posix_deployment.plantuml.txt  file_sources_pydantic_models.plantuml.txt  file_sources_template_expansion.plantuml.txt  file_sources_uri_resolution.plantuml.txt  markdown_architecture_overview.plantuml.txt  (+14 more)
review/: Makefile  (+3 more)
(+227 files in other folders)
